--- a/html/massive-input-1/index.html
+++ b/html/massive-input-1/index.html
@@ -523,12 +523,14 @@
       });
     </script>
     <p>This is an idea I saw from this <a href="https://nintil.com/massive-input-spaced-repetition/">blog post</a>. The question we’re trying to solve is what is an effective strategy to learn things. There’s two main approaches.</p>
-    <dl>
-      <dt>Bottom-Up</dt>
-      <dd>Build your knowledge gradually, learning each and every core component. After doing this for a while, you will have a great understanding about the subject matter with few holes.</dd>
-      <dt>Top-Down</dt>
-      <dd>Learn about the things you want to know, recursing into your knowledge gaps as necessary.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>Bottom-Up</dt>
+        <dd>Build your knowledge gradually, learning each and every core component. After doing this for a while, you will have a great understanding about the subject matter with few holes.</dd>
+        <dt>Top-Down</dt>
+        <dd>Learn about the things you want to know, recursing into your knowledge gaps as necessary.</dd>
+      </dl>
+    </div>
     <p><strong>Bottom-Up</strong> is great when you’re early in the learning stage, where you’re learning the basics upon which every advanced topic will require an excellent understanding.</p>
     <p><strong>Top-Down</strong> is great when you want exposure, when you’re trying to learn something as fast as possible, and when you’re trying to maximize for engagement. It’s also the only viable approach when trying to gain an understanding of a truly massive space in a short-time.</p>
     <p>To that end, I’m going to use a <strong>Top-down</strong> approach to try and learn as much about <strong>Bio</strong>, <strong>Robotics</strong>, and anything else I stumble upon that seems remotely interesting.</p>
@@ -538,101 +540,115 @@
     <p>Ok in a nutshell this predicts the effects of non-coding sequences of DNA, such as their effects on where genes start, and how much RNA these regulatory genese induce.</p>
     <h4><a href="https://www.retro.bio/science">Retro Biosciences</a></h4>
     <h5><a href="https://febs.onlinelibrary.wiley.com/doi/10.1002/1873-3468.13681">Article on HSC Reprogramming</a></h5>
-    <dl>
-      <dt>In Vitro</dt>
-      <dd>Doing a biological process outside of a living organism.</dd>
-      <dt>In Vivo</dt>
-      <dd>The opposite of <strong>In Vitro</strong></dd>
-      <dt>Exogenous Gene Expression</dt>
-      <dd>The expression of a gene foreign to the organism.</dd>
-      <dt>Retrovirus</dt>
-      <dd>Reverse transcribes it’s RNA into DNA and injects that into the hosts DNA. The host cell has altered DNA for life. A normal virus would just give the cells instructions to produce different kinds of proteins, not fundamentally rewire it.</dd>
-      <dt>Transcription Factors</dt>
-      <dd>Proteins that gets stuck to sequences of DNA. It’s chemical properties can increase the odds that RNA polymerase will start transcribing this DNA region, or decrease them.</dd>
-      <dt>Protein</dt>
-      <dd>Chain of Amino Acids</dd>
-      <dt>Enzyme</dt>
-      <dd>Special type of protein that speeds up chemical reactions.</dd>
-      <dt>Acid</dt>
-      <dd>Substance which donates protons. I remember this.</dd>
-      <dt>Nucleic Acid</dt>
-      <dd>Less reactive, stable, good for information storage (buildling block of DNA).</dd>
-      <dt>Amino Acid</dt>
-      <dd>Acidic, Basic, Polar, Nonpolar, a lot more types, form much more complex shapes, can do much crazier things. Building block of Proteins.</dd>
-      <dt>Hematology</dt>
-      <dd>The branch of medicine focused on the study of blood.</dd>
-      <dt>Haematopoietic Lineage Decisions</dt>
-      <dd>Basically how certain stem cells decide to be certain blood cells.</dd>
-      <dt>Transduced</dt>
-      <dd>Transferring genetic material from once cell to another.</dd>
-      <dt>Cytokines</dt>
-      <dd>Small proteins that are transmitted between cells as a means of communication.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>In Vitro</dt>
+        <dd>Doing a biological process outside of a living organism.</dd>
+        <dt>In Vivo</dt>
+        <dd>The opposite of <strong>In Vitro</strong></dd>
+        <dt>Exogenous Gene Expression</dt>
+        <dd>The expression of a gene foreign to the organism.</dd>
+        <dt>Retrovirus</dt>
+        <dd>Reverse transcribes it’s RNA into DNA and injects that into the hosts DNA. The host cell has altered DNA for life. A normal virus would just give the cells instructions to produce different kinds of proteins, not fundamentally rewire it.</dd>
+        <dt>Transcription Factors</dt>
+        <dd>Proteins that gets stuck to sequences of DNA. It’s chemical properties can increase the odds that RNA polymerase will start transcribing this DNA region, or decrease them.</dd>
+        <dt>Protein</dt>
+        <dd>Chain of Amino Acids</dd>
+        <dt>Enzyme</dt>
+        <dd>Special type of protein that speeds up chemical reactions.</dd>
+        <dt>Acid</dt>
+        <dd>Substance which donates protons. I remember this.</dd>
+        <dt>Nucleic Acid</dt>
+        <dd>Less reactive, stable, good for information storage (buildling block of DNA).</dd>
+        <dt>Amino Acid</dt>
+        <dd>Acidic, Basic, Polar, Nonpolar, a lot more types, form much more complex shapes, can do much crazier things. Building block of Proteins.</dd>
+        <dt>Hematology</dt>
+        <dd>The branch of medicine focused on the study of blood.</dd>
+        <dt>Haematopoietic Lineage Decisions</dt>
+        <dd>Basically how certain stem cells decide to be certain blood cells.</dd>
+        <dt>Transduced</dt>
+        <dd>Transferring genetic material from once cell to another.</dd>
+        <dt>Cytokines</dt>
+        <dd>Small proteins that are transmitted between cells as a means of communication.</dd>
+      </dl>
+    </div>
     <p>Ok… I get the idea, take some stem cell and use it to make blood cells. Currently, there’s no way to mass manufacture blood cells, which is kind of surprising now that I think about it.</p>
     <h5><a href="https://www.nature.com/scitable/topicpage/the-discovery-of-lysosomes-and-autophagy-14199828/?utm_source=chatgpt.com">Article on Autophagy</a></h5>
-    <dl>
-      <dt>Metabolism</dt>
-      <dd>The set of reactions that occur in cells involved with growth, reproduction and maintenance.</dd>
-      <dt>Anabolism</dt>
-      <dd>The subset of metabolism related to creating stuff.</dd>
-      <dt>Catabolism</dt>
-      <dd>The subset of metabolism related to destroying stuff.</dd>
-      <dt>Autophagy</dt>
-      <dd>Means “self-eating”, it’s a catabolic process which delivers stuff to the lysosomes who break it down for digestion.</dd>
-      <dt>Lysosome</dt>
-      <dd>Basically bags of enzymes, used to break stuff down.</dd>
-      <dt>Autophagosomes</dt>
-      <dd>Literal membranes spheres that wrap some portion of stuff inside a cell and then transport it to Lysosomes.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>Metabolism</dt>
+        <dd>The set of reactions that occur in cells involved with growth, reproduction and maintenance.</dd>
+        <dt>Anabolism</dt>
+        <dd>The subset of metabolism related to creating stuff.</dd>
+        <dt>Catabolism</dt>
+        <dd>The subset of metabolism related to destroying stuff.</dd>
+        <dt>Autophagy</dt>
+        <dd>Means “self-eating”, it’s a catabolic process which delivers stuff to the lysosomes who break it down for digestion.</dd>
+        <dt>Lysosome</dt>
+        <dd>Basically bags of enzymes, used to break stuff down.</dd>
+        <dt>Autophagosomes</dt>
+        <dd>Literal membranes spheres that wrap some portion of stuff inside a cell and then transport it to Lysosomes.</dd>
+      </dl>
+    </div>
     <p>There’s some evidence it can protect against cancer and celluar damage in general. Which makes sense, having a garbage collector seems helpful.</p>
     <h5><a href="https://jneuroinflammation.biomedcentral.com/articles/10.1186/s12974-024-03015-9?utm_source=chatgpt.com">Microglia Therapeutics</a></h5>
-    <dl>
-      <dt>Central Nervous System (CNS)</dt>
-      <dd>The Brain and Spinal Chord</dd>
-      <dt>Microglia</dt>
-      <dd>The immune cells which live in the Central Nervous System. More specifically, they are brain-resident macrophages.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>Central Nervous System (CNS)</dt>
+        <dd>The Brain and Spinal Chord</dd>
+        <dt>Microglia</dt>
+        <dd>The immune cells which live in the Central Nervous System. More specifically, they are brain-resident macrophages.</dd>
+      </dl>
+    </div>
     <p>Wait WTF?</p>
     <blockquote>Nearly one in six of the world’s population suffers from neurological disorders, encompassing neurodegenerative and neuroautoimmune diseases, most with dysregulated neuroinflammation involved.</blockquote>
-    <dl>
-      <dt>Major Histocompatibility Complex (MHC)</dt>
-      <dd>The group of genese that encode the fancy antigen presenting proteins (e.g. proteins which showcase things of concern to the surface of the cell) so that T-Cells can distinguish between foreign and native cells.</dd>
-      <dt>Axons</dt>
-      <dd>Thread like things attached to nerve cells which transmit electrical signals.</dd>
-      <dt>Myelin</dt>
-      <dd>The stuff which coats Axons… and somehow helps transmit signals?</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>Major Histocompatibility Complex (MHC)</dt>
+        <dd>The group of genese that encode the fancy antigen presenting proteins (e.g. proteins which showcase things of concern to the surface of the cell) so that T-Cells can distinguish between foreign and native cells.</dd>
+        <dt>Axons</dt>
+        <dd>Thread like things attached to nerve cells which transmit electrical signals.</dd>
+        <dt>Myelin</dt>
+        <dd>The stuff which coats Axons… and somehow helps transmit signals?</dd>
+      </dl>
+    </div>
     <p><strong>Some relevant neuroscience</strong> Here’s some more in-depth info on this. The brain doesn’t really transmit charge across Axons. Instead, it transmits “spikes” of current. Initiailly, the inside of the Axon is negatively charged, then a ton of current floods in to the inside of the Axon. At some point the gradient between the inside and outside is large enough that the charge rushes to the outside, causing a spike in the charge of the outside of the membrane, which quickly drains off.</p>
     <p>This spike in voltage on the membrane can trigger the release of chemicals which start the process over again at some other portion of membrane. It’s like a chain of dominos. There’s even a mechanism akin to amplifiers. Like imagine your’re a neuron with an axon to another neuron. Suppose the other neuron is very far away. If you just used an axon, the signal would decay far too much to be detectable. So instead, things are segmented into patched, and tiny little amplifiers ensure that the signal propogates with full strength across the entire Axon.</p>
     <p>What Myelin really does is prevent charge from inside the membrane from easily leaking outside of the membrane, thereby increasing the amount of distance before you need another amplifier. The fewer amplifiers you need, the faster the connection! You can’t get rid of amplifiers entirely though, because there is still other sources of electrical leakage.</p>
     <p><strong>Microglia</strong> can help eliminate <strong>myelin</strong> debris, which partially explains why it’s important for mitigating neurodegenerative disease. They also just clean up all the junk apoptosis remains after an inflamation response, the state of your brain clean.</p>
-    <dl>
-      <dt>Phagocyte</dt>
-      <dd>Type of cell which consumes bacteria and other small particles.</dd>
-      <dt>Homeostasis</dt>
-      <dd>The process by which you maintian a stable internal environment despite external changes.</dd>
-      <dt>Constitutively Activate Protein</dt>
-      <dd>A protein which is perpetually in the active state.</dd>
-      <dt>ROS-laden</dt>
-      <dd>A state where something contains reactive oxygen species. Makes for unstable cell environments.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>Phagocyte</dt>
+        <dd>Type of cell which consumes bacteria and other small particles.</dd>
+        <dt>Homeostasis</dt>
+        <dd>The process by which you maintian a stable internal environment despite external changes.</dd>
+        <dt>Constitutively Activate Protein</dt>
+        <dd>A protein which is perpetually in the active state.</dd>
+        <dt>ROS-laden</dt>
+        <dd>A state where something contains reactive oxygen species. Makes for unstable cell environments.</dd>
+      </dl>
+    </div>
     <p>If your <strong>Microglia</strong> are perpetually activate, then they’ll be constantly secreting cytokines asking for an immune response. This will do a lot of damage to your neurons. Point being, under or over activity of these immune cells can cause a lot of damage to the brain.</p>
-    <dl>
-      <dt>NK-Cells</dt>
-      <dd>Natural Killer Cells, unlike T-Cells which kill thing if they don’t present proper antigens, these guys have different mechanisms which allow them to efficiently detect and kill problematic cells.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>NK-Cells</dt>
+        <dd>Natural Killer Cells, unlike T-Cells which kill thing if they don’t present proper antigens, these guys have different mechanisms which allow them to efficiently detect and kill problematic cells.</dd>
+      </dl>
+    </div>
     <p>There are a lot of medical approaches which just do something to Microglia cells. Just as an overview, using the cells to deliver drugs, suppressing their activity, boosting their activity, etc. I might come back to this section and try to learn precisely how one or two of these approaches work.</p>
     <h5><a href="https://jbioleng.biomedcentral.com/articles/10.1186/s13036-019-0144-9">Tissue Reprogramming</a></h5>
-    <dl>
-      <dt>Pluripotent</dt>
-      <dd>capable of becoming many other types of cells (think stem cells)</dd>
-      <dt>iPSC Reprogramming</dt>
-      <dd>Turn the cell back into a Pluripotent state, then use transcription factors to guide it down to the cell type you want. Typically takes a few months, and if it doesn’t fully finish differentiating the cell, can end up creating cancerous cells (somehow).</dd>
-      <dt>Direct Reprogrmaming</dt>
-      <dd>Directly transform one somatic cell to another using transcription factors. It is much less likely to produce mutations or tumor formation, and way faster.</dd>
-      <dt>Non-Dividing Cells</dt>
-      <dd>Did you know not all cells divide? The canonical example is the neuron. They can still get made, e.g. through stem cells reproducing and differentiating, but they do not themselves reproduce.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>Pluripotent</dt>
+        <dd>capable of becoming many other types of cells (think stem cells)</dd>
+        <dt>iPSC Reprogramming</dt>
+        <dd>Turn the cell back into a Pluripotent state, then use transcription factors to guide it down to the cell type you want. Typically takes a few months, and if it doesn’t fully finish differentiating the cell, can end up creating cancerous cells (somehow).</dd>
+        <dt>Direct Reprogrmaming</dt>
+        <dd>Directly transform one somatic cell to another using transcription factors. It is much less likely to produce mutations or tumor formation, and way faster.</dd>
+        <dt>Non-Dividing Cells</dt>
+        <dd>Did you know not all cells divide? The canonical example is the neuron. They can still get made, e.g. through stem cells reproducing and differentiating, but they do not themselves reproduce.</dd>
+      </dl>
+    </div>
     <p>The general pipeline seems to work like this. You couple an antibiotic resistant gene and some genes the will boost the transcription factors you want into a single virus. Then, you infect all the cells with that virus (it’s a retrovirus, so it gets inserted into the genome). You employ antibiotics and prune out all the cells which didn’t successfully integrate the virus. Everything else will now hopefully differentiate into the desired cell type.</p>
     <p>Currently, the method for choosing what transcription factors to over-express isn’t very efficient, a lot of researchers do some form of guess and check.</p>
     <p>It’s somewhat hard to get any real insight into any of the specific approaches. It feels like a long list of “this person tried X and achieved Y”.</p>
