--- a/html/typst/index.html
+++ b/html/typst/index.html
@@ -599,12 +599,14 @@
     <p>I can do quotes!</p>
     <blockquote>Typst is pretty cool guys</blockquote>
     <p>I can also do terms.</p>
-    <dl>
-      <dt>Agency</dt>
-      <dd>The ability to choose your path independently of the environment you’re placed in.</dd>
-      <dt>Book</dt>
-      <dd>A fun thing people should use more.</dd>
-    </dl>
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+      <dl>
+        <dt>Agency</dt>
+        <dd>The ability to choose your path independently of the environment you’re placed in.</dd>
+        <dt>Book</dt>
+        <dd>A fun thing people should use more.</dd>
+      </dl>
+    </div>
     <p>Wow, tables work natively!</p>
     <div class="expressive-code" style="--ec-borderRad:0.34em;--ec-codePadBlk:0.34em;--ec-codePadInl:0.34em;--ec-codeFg:#000000;--ec-codeBg:#f5f5f5;--ec-langBg:#effbf9;--ec-langFg:#000000;--ec-copyBg:#f7f7f7;--ec-copyFg:#000000;--ec-gutterBg:#f5f5f5;--ec-gutterGap:0.25rem;--ec-gutterPadLeft:0.5rem;--ec-codeFontSize:0.85em;--ec-codeLineHeight:1.5;--ec-copyBgHover:#f8f8f8;--ec-copyBgFocus:#f8f8f8;--ec-copyFgHover:#000000;--ec-copyFgFocus:#000000;--ec-hlBg:#dff6f2;--ec-commentBg:#effbf9">
       <button type="button" class="copy-button" title="Copy code" data-state="idle" aria-label="Copy code"><span class="sr-only">Copy code</span><span class="copy-label" aria-hidden="true">Copy</span><span class="copy-feedback" aria-hidden="true">Copied!</span></button>
