more useless changes

--- a/html/massive-input-1/index.html
+++ b/html/massive-input-1/index.html
@@ -523,7 +523,7 @@
       });
     </script>
     <p>This is an idea I saw from this <a href="https://nintil.com/massive-input-spaced-repetition/">blog post</a>. The question we’re trying to solve is what is an effective strategy to learn things. There’s two main approaches.</p>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>Bottom-Up</dt>
         <dd>Build your knowledge gradually, learning each and every core component. After doing this for a while, you will have a great understanding about the subject matter with few holes.</dd>
@@ -540,7 +540,7 @@
     <p>Ok in a nutshell this predicts the effects of non-coding sequences of DNA, such as their effects on where genes start, and how much RNA these regulatory genese induce.</p>
     <h4><a href="https://www.retro.bio/science">Retro Biosciences</a></h4>
     <h5><a href="https://febs.onlinelibrary.wiley.com/doi/10.1002/1873-3468.13681">Article on HSC Reprogramming</a></h5>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>In Vitro</dt>
         <dd>Doing a biological process outside of a living organism.</dd>
@@ -574,7 +574,7 @@
     </div>
     <p>Ok… I get the idea, take some stem cell and use it to make blood cells. Currently, there’s no way to mass manufacture blood cells, which is kind of surprising now that I think about it.</p>
     <h5><a href="https://www.nature.com/scitable/topicpage/the-discovery-of-lysosomes-and-autophagy-14199828/?utm_source=chatgpt.com">Article on Autophagy</a></h5>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>Metabolism</dt>
         <dd>The set of reactions that occur in cells involved with growth, reproduction and maintenance.</dd>
@@ -592,7 +592,7 @@
     </div>
     <p>There’s some evidence it can protect against cancer and celluar damage in general. Which makes sense, having a garbage collector seems helpful.</p>
     <h5><a href="https://jneuroinflammation.biomedcentral.com/articles/10.1186/s12974-024-03015-9?utm_source=chatgpt.com">Microglia Therapeutics</a></h5>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>Central Nervous System (CNS)</dt>
         <dd>The Brain and Spinal Chord</dd>
@@ -602,7 +602,7 @@
     </div>
     <p>Wait WTF?</p>
     <blockquote>Nearly one in six of the world’s population suffers from neurological disorders, encompassing neurodegenerative and neuroautoimmune diseases, most with dysregulated neuroinflammation involved.</blockquote>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>Major Histocompatibility Complex (MHC)</dt>
         <dd>The group of genese that encode the fancy antigen presenting proteins (e.g. proteins which showcase things of concern to the surface of the cell) so that T-Cells can distinguish between foreign and native cells.</dd>
@@ -616,7 +616,7 @@
     <p>This spike in voltage on the membrane can trigger the release of chemicals which start the process over again at some other portion of membrane. It’s like a chain of dominos. There’s even a mechanism akin to amplifiers. Like imagine your’re a neuron with an axon to another neuron. Suppose the other neuron is very far away. If you just used an axon, the signal would decay far too much to be detectable. So instead, things are segmented into patched, and tiny little amplifiers ensure that the signal propogates with full strength across the entire Axon.</p>
     <p>What Myelin really does is prevent charge from inside the membrane from easily leaking outside of the membrane, thereby increasing the amount of distance before you need another amplifier. The fewer amplifiers you need, the faster the connection! You can’t get rid of amplifiers entirely though, because there is still other sources of electrical leakage.</p>
     <p><strong>Microglia</strong> can help eliminate <strong>myelin</strong> debris, which partially explains why it’s important for mitigating neurodegenerative disease. They also just clean up all the junk apoptosis remains after an inflamation response, the state of your brain clean.</p>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>Phagocyte</dt>
         <dd>Type of cell which consumes bacteria and other small particles.</dd>
@@ -629,7 +629,7 @@
       </dl>
     </div>
     <p>If your <strong>Microglia</strong> are perpetually activate, then they’ll be constantly secreting cytokines asking for an immune response. This will do a lot of damage to your neurons. Point being, under or over activity of these immune cells can cause a lot of damage to the brain.</p>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>NK-Cells</dt>
         <dd>Natural Killer Cells, unlike T-Cells which kill thing if they don’t present proper antigens, these guys have different mechanisms which allow them to efficiently detect and kill problematic cells.</dd>
@@ -637,7 +637,7 @@
     </div>
     <p>There are a lot of medical approaches which just do something to Microglia cells. Just as an overview, using the cells to deliver drugs, suppressing their activity, boosting their activity, etc. I might come back to this section and try to learn precisely how one or two of these approaches work.</p>
     <h5><a href="https://jbioleng.biomedcentral.com/articles/10.1186/s13036-019-0144-9">Tissue Reprogramming</a></h5>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>Pluripotent</dt>
         <dd>capable of becoming many other types of cells (think stem cells)</dd>
