--- a/html/typst/index.html
+++ b/html/typst/index.html
@@ -599,7 +599,7 @@
     <p>I can do quotes!</p>
     <blockquote>Typst is pretty cool guys</blockquote>
     <p>I can also do terms.</p>
-    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid;">
+    <div style="padding: 4pt; background: #eceffe; border-radius: 4pt; border-color: #93baff; border-width: 4pt; border-style: solid; position: relative; margin-top:16pt; margin-bottom:16pt;">
       <dl>
         <dt>Agency</dt>
         <dd>The ability to choose your path independently of the environment you’re placed in.</dd>
