--- a/html/neuro/index.html
+++ b/html/neuro/index.html
@@ -544,59 +544,59 @@
     <div id="loc-2" style>
       <h3>1.1. Types of Memory</h3>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Sensory Memory</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.1</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">An extremely short-term buffer of sensory information (audio, visual, etc.). This doesn’t last longer then a second and cannot be consciously controlled. This is responsible for the “after-image” when you close your eyes. Unlike many forms of memory, you can’t increase the capacity of sensory memory with practice.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">An extremely short-term buffer of sensory information (audio, visual, etc.). This doesn’t last longer then a second and cannot be consciously controlled. This is responsible for the “after-image” when you close your eyes. Unlike many forms of memory, you can’t increase the capacity of sensory memory with practice.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Short-term Memory</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.2</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">A memory system which allows stores information on the scale of seconds to minutes. In <a href="https://en.wikipedia.org/wiki/The_Magical_Number_Seven,_Plus_or_Minus_Two">The Magical Number Seven, Plus or Minus Two</a>, experimental tests showed most people can only track 5 to 9 objects at a time. Objects can have sizable complexity, so it is more efficient to remember a phone number as 3 3-4 digit numbers than as a 10 digit string.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">A memory system which allows stores information on the scale of seconds to minutes. In <a href="https://en.wikipedia.org/wiki/The_Magical_Number_Seven,_Plus_or_Minus_Two">The Magical Number Seven, Plus or Minus Two</a>, experimental tests showed most people can only track 5 to 9 objects at a time. Objects can have sizable complexity, so it is more efficient to remember a phone number as 3 3-4 digit numbers than as a 10 digit string.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Episodic Memory</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.3</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Part of Long-term Memory. This type of memory holds past personal experiences and can be explicitly recalled.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">Part of Long-term Memory. This type of memory holds past personal experiences and can be explicitly recalled.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Semantic Memory</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.4</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Part of Long-term Memory. This holds facts and other conceptual information. It’s usually not tied to the specific experience of acquiring the memory.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">Part of Long-term Memory. This holds facts and other conceptual information. It’s usually not tied to the specific experience of acquiring the memory.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Procedural Memory</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.5</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Part of Long-term Memory. This type of memory consists of skills you remember how to do. It’s not tied to the experience of acquiring the skill. It’s the type of memory responsible for improvement with practice despite no new recollections. Example things it might store are how to ride a bike, shuffle a deck of cards, and compute a derivative.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">Part of Long-term Memory. This type of memory consists of skills you remember how to do. It’s not tied to the experience of acquiring the skill. It’s the type of memory responsible for improvement with practice despite no new recollections. Example things it might store are how to ride a bike, shuffle a deck of cards, and compute a derivative.</div>
     <div id="loc-3" style>
       <h3>1.2. Engram Creation</h3>
     </div>
     <p>The heart of memory research is to precisely state the storage and retrieval mechanism. The storage mechanism for long-term memory is called an engram, and it requires some permanent change to the neurons (like Long Term Potentiation).</p>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Engram</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.2.6</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">The enduring change in the brain that an experience produces.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">The enduring change in the brain that an experience produces.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Long Term Potentiation</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.2.7</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">A persistent strengthening of synapses based on recent patterns of activity.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">A persistent strengthening of synapses based on recent patterns of activity.</div>
     <p><strong>Engrams</strong> are typically a sparse subset of neurons. Investigation in CA3 pyramidal neurons shows that these while these neurons are initially typical, they rapidly become more excitable over the course of a day past when the memory was made. More precisely, there’s a lot more electrical inputs that trigger action potentials and lead to prolonged spiking activity. There’s also more inputs that <em>inhibit</em> action potentials.</p>
     <div style="padding: 8pt;">
       <div style="text-align: center;vertical-align: text-top" class="align">
